# abortive-work

./: .gitignore  Cargo.toml
assets/: furnace.vox  mage.aseprite
src/: main.rs
src/assets/: emojis.rs
src/entities/: boulder.rs  conveyor.rs  dump.rs  fireplace.rs  generator.rs  ground.rs  imp.rs  mage.rs  mod.rs  pile.rs  res_bundles.rs  ritual_site.rs  rock.rs  sign.rs  smithery.rs  storage.rs  template.rs  transformer.rs  tree.rs
src/extensions/: geom.rs  mod.rs  query.rs
src/systems/: animations.rs  augmentation.rs  brain.rs  building_tool.rs  camera.rs  destructor.rs  focus.rs  interact_with_focus.rs  map_gen.rs  meshes.rs  mod.rs  store.rs  things.rs  user_input.rs
