[package]
edition = "2018"
name = "game"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.5"

sm = "0.9.0"
bevy = {git = "https://github.com/bevyengine/bevy"}
bevy_mod_picking = {git = "https://github.com/JulianRuiseco/bevy_mod_picking"}
bevy_egui = {git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main"}

[patch.'https://github.com/bevyengine/bevy']
bevy = {git = "https://github.com/bevyengine/bevy?branch=main", rev = "62e4e59a"}

[patch.'crates-io']
bevy = {git = "https://github.com/bevyengine/bevy?branch=main", rev = "62e4e59a"}