[package]
edition = "2018"
name = "game"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.5"
noice = "0.7.1"
sm = "0.9.0"
lyon = "0.17"

bevy = {git = "https://github.com/bevyengine/bevy", features = ["default", "jpeg", "bevy_dylib"]}
bevy_egui = {git = "https://github.com/jakobhellermann/bevy_egui", branch = "bevy-main"}
bevy_mod_picking = {git = "https://github.com/JulianRuiseco/bevy_mod_picking"}
big-brain = {git = "https://github.com/payload/big-brain.git"}
bevy_prototype_debug_lines = {git = "https://github.com/payload/bevy_debug_lines.git"}

[patch.'https://github.com/bevyengine/bevy']
bevy = {git = "https://github.com/bevyengine/bevy?branch=main", rev = "51a5070c"}

[patch.'crates-io']
bevy = {git = "https://github.com/bevyengine/bevy?branch=main", rev = "51a5070c"}
